Added: JWT Token Implementation For GetEmployees API

--- a/EmployeeApp/appsettings.json
+++ b/EmployeeApp/appsettings.json
@@ -1,8 +1,16 @@
 {
+  "Jwt": {
+    "Key": "ThisismySecretKey",
+    "Issuer": "https://localhost:44324/",
+    "Audiance": "https://localhost:44324/"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "Data": {
+    "ConnectionVariable": "Server=DESKTOP-OF8D1IH;Database=EmployeeDatabase;Trusted_Connection=true;MultipleActiveResultSets=True"
+  }
+  //"AllowedHosts": "*"
 }
