--- a/WebApiTestCase/WebApiTestCase.csproj
+++ b/WebApiTestCase/WebApiTestCase.csproj
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\EmployeeApp\SimpleApplication.csproj" />
+    <ProjectReference Include="..\EmployeeApp\EmployeeManagement.csproj" />
   </ItemGroup>
 
 </Project>
