--- a/MSMQ/MSMQ.csproj
+++ b/MSMQ/MSMQ.csproj
@@ -1,16 +1,14 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="MimeKit" Version="1.10.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\EmployeeApp\EmployeeManagement.csproj" />
-  </ItemGroup>
-
+	<ItemGroup>
+		<PackageReference Include="Experimental.System.Messaging" Version="1.1.0" />
+		<PackageReference Include="MailKit" Version="2.1.1" />
+		<PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="2.1.1" />
+	</ItemGroup>
+	
 </Project>
