--- a/EmployeeApp/EmployeeManagement.csproj
+++ b/EmployeeApp/EmployeeManagement.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="MailKit" Version="1.10.1" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.Extensions.Caching.Redis" Version="2.1.2" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.10" />
     <PackageReference Include="MimeKit" Version="1.10.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="4.0.1" />
